syntax = "proto3";

message IngestRequest {
  string url = 1;
}
